@@ -2,12 +2,14 @@
 
 # (c)keithhedger Tue 9 Jan 13:48:05 GMT 2024 kdhedger68713@gmail.com
 
-#USEVALGRIND="valgrind --leak-check=full"
+if [[ $USEVALGRIND -eq 1 ]];then
+	VALGRIND="valgrind --leak-check=full "
+fi
 
 APPNAME=$(basename $0 .cpp)
 
-g++ "$0" -O0 -ggdb $(pkg-config --cflags --libs x11 xft cairo lfstk ) -llfstoolkit -lImlib2 -o $APPNAME ||exit 1
-$USEVALGRIND ./$APPNAME "$@"
+g++ "$0" -O0 -ggdb -I../LFSToolKit -L../LFSToolKit/app/.libs $(pkg-config --cflags --libs x11 xft cairo ) -llfstoolkit -lImlib2 -o $APPNAME||exit 1
+LD_LIBRARY_PATH=../LFSToolKit/app/.libs $VALGRIND ./$APPNAME "$@"
 
 retval=$?
 echo "Exit code $retval"
@@ -20,6 +22,23 @@ exit $retval
 
 int main(int argc, char **argv)
 {
+
+	LFSTK_applicationClass	*apc=new LFSTK_applicationClass();
+	std::string				names="w1,Desk 2,w3,w4,NoDesk,w6";
+	std::string				x;
+	const char				*x1;
+
+	x=LFSTK_UtilityClass::LFSTK_strReplaceAll(names,",",std::string("")+='\0');
+	x1=x.c_str();
+	XChangeProperty(apc->display,apc->rootWindow,XInternAtom(apc->display,"_NET_DESKTOP_NAMES",false),
+	XInternAtom(apc->display,"UTF8_STRING",false),
+	8,
+	PropModeReplace,
+	(const unsigned char*)*&x1
+	,names.length()
+	);
+#if 0
+
 	std::vector<std::string>	tokenstrings;
 	const char				*x1;
 	std::string				x="";
@@ -43,8 +62,10 @@ int main(int argc, char **argv)
 	,totallen
 	);
 
+#endif
 	XSync(apc->display,false);
-	//system("xprop -root _NET_DESKTOP_NAMES");
+	system("xprop -root _NET_DESKTOP_NAMES");
+
 	delete apc;
 	cairo_debug_reset_static_data();
 	return(0);
